--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -3,8 +3,8 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  animation: App-logo-spin infinite 10s ease-in-out;
+  height: 4vmin;
   pointer-events: none;
 }
 
